--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,3 +39,22 @@ jobs:
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
             -Dsonar.token=${{ secrets.SONAR_TOKEN }} \
             -Dsonar.sources=app
+
+      - name: Delay to ensure Quality Gate Status is ready
+        run: echo "Waiting for 30 seconds for SonarQube processing..." && sleep 30s
+
+      - name: Check SonarQube Quality Gate Status
+        id: wait_and_check
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { checkQualityGate } = require('./.github/workflows/sonar-check-script.js');
+            await checkQualityGate({
+              github, 
+              core, 
+              fetch,
+              projectKey: 'bell-khanawat_devsecops-solution'
+            });
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
